(feat) route get all weekly-rates
